## Tweet Application: First Phase: Bug Fix * 1 -> All text content saved in tweet, comment, nested comment goes in single line. new line character is not being preserved in UI. However data saved in DB is ok. -- Done * 2.1 -> Post create new comment, text not get cleared. --Done * 2.2 -> Post create new Nested comment, text not get cleared. -- Done * 3 -> increase size of text-area in EditableLabel.jsx to all width of screen or component. Also height to show all text --Done * 4 -> updated text of EditableLabel component is not being saved on first click of "Update" button -- Unresolved. Moved to TechDebt * 5 -> Comments and Nested comments get updated, even if textarea containing empty string. Add checks for empty strings same as in case of save comment and nested-comment -- Done * 6 -> Text of EditableLabel should be wrapped in view mode -- Done * 7 -> Add one changelog.md file to track what all things done in different iterations -- Done * 8 -> Make font of tweet, comment and nested text different. eg, tweet bold and some bigger, comment normal, nested comment smaller and italic -- Done * 9 -> set Times New Roman (serif) font family globally in Tweet application -- Done

--- a/learn-react/TweetApp/frontend/src/components/tweets/list-tweets3.css
+++ b/learn-react/TweetApp/frontend/src/components/tweets/list-tweets3.css
@@ -10,6 +10,11 @@ li {
   padding: 0;
 }
 
+/* Set Times New Roman font family globally */
+body {
+  font-family: "Times New Roman", serif;
+}
+
 /* Basic styling for the main container */
 .tweet-container {
   width: 600px;
@@ -99,3 +104,5 @@ CSS for sort button
 .sort-button button:hover {
   background-color: #2980b9;
 }
+
+
